--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "express": "^4.18.3",
     "firebase": "^10.8.1",
@@ -21,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "prisma": "^5.10.2",
+    "qs": "^6.11.2",
     "socket.io": "^4.7.4"
   }
 }
